--- a/css/styles.css
+++ b/css/styles.css
@@ -10849,7 +10849,7 @@ body:before {
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: #2a5555;
+  background-color: #fff;
   opacity: 0.7;
   z-index: 1;
 }
